--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primaryVariant">#aa3a3a</color>
+    <color name="primary">#a4b787</color>
+    <color name="background">#f4f4f4</color>
+
 </resources>
