--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sfondo"
     android:backgroundTint="@color/sfondo"
     tools:context=".MainActivity">
 
@@ -12,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/sfondo"
+        android:backgroundTint="@color/sfondo"
         app:layout_anchor="@+id/constraintLayout"
         app:layout_anchorGravity="center">
 
@@ -24,9 +26,9 @@
             android:background="@color/primario"
             android:backgroundTint="@color/primario"
             android:text="VAI IN PAUSA"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/testoBottoni"
             android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
+            app:layout_constraintBottom_toTopOf="@+id/fabCustom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,12 +43,13 @@
             android:background="@color/primario"
             android:backgroundTint="@color/primario"
             android:text="RESET TIMER"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/testoBottoni"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnAvviaPausa"
-            tools:visibility="invisible" />
+            tools:visibility="visible" />
 
         <Button
             android:id="@+id/btnUnMin"
@@ -57,7 +60,7 @@
             android:background="@color/primario"
             android:backgroundTint="@color/primario"
             android:text="1:00"
-            android:textColor="@color/white"
+            android:textColor="@color/testoBottoni"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/btnAvviaPausa"
@@ -71,7 +74,7 @@
             android:background="@color/primario"
             android:backgroundTint="@color/primario"
             android:text="1:30"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/testoBottoni"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/btnAvviaPausa"
             app:layout_constraintTop_toTopOf="@+id/btnUnMin" />
@@ -83,7 +86,7 @@
             android:background="@color/primario"
             android:backgroundTint="@color/primario"
             android:text="2:00"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/testoBottoni"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="@+id/btnAvviaPausa"
             app:layout_constraintTop_toTopOf="@+id/btnDueMinEMezzo" />
@@ -96,7 +99,7 @@
             android:background="@color/primario"
             android:backgroundTint="@color/primario"
             android:text="2:30"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/testoBottoni"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/btnAvviaPausa"
             app:layout_constraintTop_toBottomOf="@+id/btnUnMin" />
@@ -105,10 +108,11 @@
             android:id="@+id/btnImpostazioni"
             android:layout_width="66dp"
             android:layout_height="51dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="9dp"
             android:background="@color/primario"
             app:icon="@android:drawable/ic_lock_silent_mode_off"
+            app:iconTint="@color/testoBottoni"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -123,7 +127,7 @@
             android:text="00:00:00"
             android:textAlignment="center"
             android:textAllCaps="false"
-            android:textColor="@color/black"
+            android:textColor="@color/testoTimer"
             android:textSize="78sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -141,18 +145,22 @@
             app:popupTheme="@style/Theme.TimerPauseCalisthenics.PopupOverlay" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/fabCustom"
+            style="@style/Theme.TimerPauseCalisthenics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/variantePrimaria"
             android:clickable="true"
-            android:tint="@color/teal_200"
+            android:tint="@color/white"
             app:backgroundTint="@color/variantePrimaria"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:rippleColor="@color/sfondo"
-            app:srcCompat="@android:drawable/ic_menu_recent_history" />
+            app:srcCompat="@drawable/ic_action_name" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
